--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ disqus_shortname:
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 2978A0 #80B3FF
-  primary-rgb: "41,120,160 #"128,179,255"
+  primary-rgb: "41,120,160"
   secondary: 315659 #FD6E8A
   secondary-dark: 253031 #A2122F
 
